--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,39 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+a {
+  color: rgba(49, 46, 129, 1);
+}
+
+body {
+  background-color: rgba(249, 250, 251, 1);
+}
+
+@media (prefers-color-scheme: dark) {
+  a {
+    color: rgba(224, 231, 255, 1);
+  }
+
+  body {
+    background-color: black;
+  }
+}
+
+/* hack to remote the print headers from the page */
+@page {
+  size: auto;
+  margin: 0mm;
+}
+
+@media print {
+  .pagebreak {
+    page-break-before: always;
+  } /* page-break-after works, as well */
+}
+
+@media print {
+  .unbreakable {
+    break-inside: avoid;
+  }
+}
